# pdbstex

./: .gitignore  LICENSE  README.md  pyproject.toml  troubleshooting.md
.github/workflows/: publish-on-pypi.yml
src/pdbstex/: cli.py  config.py  io.py  pipeline.py  processing.py  rcsb.py  utils.py
src/pdbstex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
